Pcam2019/vitis/.metadata/.plugins/org.eclipse.cdt.ui/Pcam5C-app.build.log
21:49:00 **** Incremental Build of configuration Debug for project Pcam5C-app ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/main.cc'
'Invoking: ARM v7 g++ compiler'
arm-none-eabi-g++ -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Github/Zybo_mipi/Pcam2019/vitis/Pcam5C-2019/export/Pcam5C-2019/sw/Pcam5C-2019/standalone_domain/bspinclude/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.cc"
In file included from ../src/main.cc:7:
../src/ov5640/AXI_VDMA.h: In instantiation of 'void digilent::AXI_VDMA<IrptCtl>::writeHandler(uint32_t) [with IrptCtl = digilent::ScuGicInterruptController; uint32_t = long unsigned int]':
../src/ov5640/AXI_VDMA.h:61:25:   required from 'digilent::AXI_VDMA<IrptCtl>::AXI_VDMA(uint16_t, uint32_t, IrptCtl&, uint16_t, uint16_t) [with IrptCtl = digilent::ScuGicInterruptController; uint16_t = short unsigned int; uint32_t = long unsigned int]'
../src/main.cc:84:21:   required from here
../src/ov5640/AXI_VDMA.h:248:13: error: invalid conversion from 'char*' to 'char' [-fpermissive]
    *pointer = (char *)intPointer;
    ~~~~~~~~~^~~~~~~~~~~~~~~~~~~~
../src/ov5640/AXI_VDMA.h:253:16: error: invalid conversion from 'int*' to 'int' [-fpermissive]
    *intPointer = (int *)pointer; //counter
    ~~~~~~~~~~~~^~~~~~~~~~~~~~~~
make[1]: *** [src/subdir.mk:23: src/main.o] Error 1
make: *** [makefile:48: all] Error 2

21:49:01 Build Finished (took 948ms)

